updated message controller and also adminPanel router and yaml file
