# server/message/router.js
@@ -3,7 +3,6 @@ const {
   sendMessage,
   getMessage,
   getSidebarContact,
-  getLastMessageDetails,
 } = require("./controller");
 const protectRoute = require("../middleware/protectRoute");
 const router = express.Router();
@@ -11,6 +10,5 @@ const router = express.Router();
 router.post("/sendMessage/:id", protectRoute, sendMessage);
 router.get("/getMessage/:id", protectRoute, getMessage);
 router.get("/getAllContacts", protectRoute, getSidebarContact);
-router.get("/getLastMessage", protectRoute, getLastMessageDetails);
 
 module.exports = router;
